package TA47

class Cercle : ObjecteGeometric {
    private var radi : Double = 0.0
}