package TA47

open class ObjecteGeometric {
    private var x : Double = 0.0
    private var y : Double = 0.0
    private var color : String = ""

    constructor(x: Double, y: Double, color: String) {}
}