package TA47

class Quadrat {
}