package TA47

class Rectangle {
}