package TA47

class Triangle {
}